Fixes overflow problems.

--- a/app/styles/layout/_base.scss
+++ b/app/styles/layout/_base.scss
@@ -2,4 +2,5 @@
 	max-width:1224px;
 	margin: 0 auto;
 	padding-bottom:40px;
+	overflow:hidden;
 }
